@@ -1,3 +1,7 @@
+2022xxxx - Gnoga V2.2-alpha:
+- ...
+
+
 20220306 - Gnoga V2.1a:
 
 - Update Makefile, TODO, README, TIPS and more.
